--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -8,6 +8,7 @@
 @media only screen and (min-width: 0em) {
     // Website colors
     :root {
+        --doc-height: 100%;
         --primary: #4c9148;
         --primaryLight: #98d395;
         --secondary: #001f3f;
